--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,5 +4,8 @@ spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driver-class-name=org.h2.Driver
 
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#jpa
+spring.jpa.show-sql=false
+
+#log
+logging.level.com.decerto.=TRACE
